<resources>
    <string name="app_name">AppTec</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_usuario">Usuario:</string>
    <string name="nomeUser">Nome do Usuário</string>
    <string name="bt_voltar">Voltar</string>
    <string name="label_senha">Senha:</string>
    <string name="hint_senha">Senha</string>
    <string name="bt_log_in">Log In</string>
    <string name="label_oqFazEsteApp">O que faz este app?</string>
    <string name="cad_usuario">Nome</string>
    <string name="cadastro">Login</string>
    <string name="label_cad_senha">Senha</string>
    <string name="btn_login">Log in</string>
    <string name="manterConectado">Manter conectado</string>
    <string name="hint_cad_nome">Digite o nome do usuário</string>
    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_senha">Senha</string>
    <string name="cad_area">Área</string>
    <string name="label_digiteArea">Área</string>
    <string name="btn_salvar">Salvar</string>
    <string name="titulo_cadastro">Cadastro</string>
    <string name="relatorio_patrimonio">Patrimônio: </string>
    <string name="relatorio_ordem_manutencao">Ordem de manutenção:</string>
    <string name="relatorio_nome_empresa">Nome da empresa: </string>
    <string name="btn_salvar_relatorio">Salvar relatório</string>
    <string name="btn_add_foto">Add foto</string>
    <string name="title_activity_cadastro_equip">Cadastro_equip</string>
    <string name="title_activity_cadastro_empresa">Cadastro_empresa</string>
    <string name="title_activity_search_for_report">SearchForReport</string>
    <string name="menu_add_new_enterprise">Add Empresa</string>
    <string name="dialog_name_enterprise">Nome da empresa</string>
    <string name="dialog_text_name">Entre com o nome da empresa</string>
</resources>
